# test_task

./: .gitignore  CMakeLists.txt  Readme.md  file_reader.cpp  grid_tracer.cpp  main.cpp  map_processing.h  stored_structures.cpp  stored_structures.h  string_utils.h
map_processing/: map_processing.h  map_processing_exceptions.h  string_utils.h
map_processing/IO/: file_reader.cpp
map_processing/UI/: console_interface.cpp
map_processing/grid_processing/: grid_tracer.cpp
map_processing/stored_structures/: stored_structures.h
